bk_ida/gccida/c3/add_bit_offset_attribute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bit_offset_attribute/src/dwarf2out.c:9811:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bit_offset_attribute/src/dwarf2out.c:9815:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+20h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bit_offset_attribute/src/dwarf2out.c:9827:34: error: use of undeclared identifier 'QCameraExposure'
highest_order_field_bit_offset = QCameraExposure::setAutoIsoSensitivity( decl); 
                                 ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bit_offset_attribute/src/obj/dwarf2out.o] Error 1
